crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_root_active_descendant.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&focused.connect(&|_| {}).root_attrs())"
---
aria-activedescendant=tree-node-i-2
data-ars-part=root
data-ars-scope=tree-view
role=tree
tabindex=0
