crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_root_default.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).root_attrs())"
---
data-ars-part=root
data-ars-scope=tree-view
role=tree
tabindex=0
