crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_root_multiselectable.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(props().multiple(true)).connect(&|_| {}).root_attrs())"
---
aria-multiselectable=true
data-ars-part=root
data-ars-scope=tree-view
role=tree
tabindex=0
